--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ section {
     content: "";
     background-color: black;
     position: absolute;
-    width: calc(80%);
+    width: calc(80% + 8px);
     height: 100%;
     border-left: 3px solid black;
     right: -8;
