--- a/style.css
+++ b/style.css
@@ -193,8 +193,6 @@ section {
 .Rolling-Text span::after {
     content: "";
     background-color: black;
-    position: absolute;
-    width: calc(70% + 8px);
     height: 100%;
     border-left: 3px solid black;
     right: -8;
@@ -208,7 +206,7 @@ section {
 }
 
 @keyframes words {
-    0%, 25% { content: "Cyber Enthusiast"; }
+    0%, 25% { content: "Web Developer "; }
     26%, 50% { content: "Developer"; }
     51%, 75% { content: "Cyber Enthusiast"; }
     76%, 100% { content: "Gamer"; }
